[project]
name = "actxps-py"
version = "0.0.1"
description = "Actuarial experience studies in Python — A/E analysis, credibility, segmentation, and reporting for life insurance portfolios."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "YOUR_NAME", email = "your.email@example.com" },
]
keywords = [
    "actuarial",
    "experience-study",
    "mortality",
    "lapse",
    "insurance",
    "life-insurance",
    "credibility",
    "ae-analysis",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "plotly>=5.20",
    "jinja2>=3.1",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/actxps-py"
Documentation = "https://YOUR_USERNAME.github.io/actxps-py"
Repository = "https://github.com/YOUR_USERNAME/actxps-py"
Issues = "https://github.com/YOUR_USERNAME/actxps-py/issues"
"R-package-inspiration" = "https://github.com/mattheaphy/actxps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actxps_py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # allow snake_case relaxation in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=actxps_py --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
